--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "RedisConnection": "localhost:6379, ssl=false, abortConnect=false",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
